src/test/c/reject/14-onlyComment.msh
/* This is an invalid program */